add/ inputs, outputs, models

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-search-bar 
-  (submit)="increaseCount()" 
+  (searchButtonClick)="increaseCount()" 
   [search]="search"
   (searchChange)="search = $event"
 />
