--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -2,8 +2,7 @@
   <input 
     type="text" 
     placeholder="Search…" 
-    [ngModel]="search"
-    (ngModelChange)="updateSearch($event)"
+    [(ngModel)]="search"
   >
   <button (click)="searchClick()">
     <fa-icon icon="search" size="1x" class="" ></fa-icon>
