add/ detection de changements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 
 <div id="card-list">
   <app-playing-card
-    [monster]="monsters[selectedMonsterIndex]"
+    [monster]="selectedMonster()"
   />
 </div>
