--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-search-bar [(search)]="search" />
 <div id="card-list">
   @for(monster of filteredMonsters(); track monster.name; let i = $index ) {
-    <div>
-      Index: {{ i + 1 }}
-    </div>
     <app-playing-card
       [monster]="monster"
     />
@@ -11,11 +8,15 @@
     No monsters found !
   }
 </div>
-<!-- 
-@if(filteredMonsters().length == 0) {
-  <div class="center">
-    No monsters found !
-  </div>
-} @else {
+@if(filteredMonsters().length > 0) {
   <div class="center">Found {{ filteredMonsters().length }} monsters !</div>
-} -->
+}
+
+<div class="center">
+  <button
+    (click)="addMonster()"
+  >
+    Add generic Monster
+  </button>
+</div>
+<br/>
