--- a/src/app/pages/monster/monster.component.html
+++ b/src/app/pages/monster/monster.component.html
@@ -1,10 +1,155 @@
-@if(monsterId()) {
-  <p>monster id : {{ monsterId() }}</p>
-  <button
-    (click)="next()"
+<form 
+  action=""
+  (submit)="onSubmit($event)"
+  [formGroup]="formGroup"
+>
+  <div class="form-field">
+    <label for="name">Name: </label>
+    <input 
+      type="text" 
+      id="name" 
+      name="name" 
+      formControlName="name"
+    />
+    @if(isFieldValid('name')) {
+      <div class="error">
+        This field is required
+      </div>
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="image">Image: </label>
+    <input 
+      type="file" 
+      id="image" 
+      name="image" 
+      formControlName="image"
+      (change)="onFileChange($event)"
+    />
+    @if(isFieldValid('image')) {
+      <div class="error">
+        This field is required
+      </div>
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="type">Type: </label>
+    <select 
+      id="type" 
+      name="type" 
+      formControlName="type"
+    >
+      @for(type of monsterTypes; track type) {
+        <option [value]="type">{{ type }}</option>
+      }
+    </select>
+  </div>
+
+  <div class="form-field">
+    <label for="hp">HP: </label>
+    <input 
+      type="number" 
+      id="hp" 
+      name="hp" 
+      formControlName="hp"
+    />
+    @if(isFieldValid('hp')) {
+      @if(formGroup.get('hp')?.hasError('required')) {
+        <div class="error">
+          This field is required.
+        </div>
+      }
+      @if(formGroup.get('hp')?.hasError('min')) {
+        <div class="error">
+          This field must bigger than 0.
+        </div>
+      }
+      @if(formGroup.get('hp')?.hasError('max')) {
+        <div class="error">
+          This field must smaller or equal to 200.
+        </div>
+      }
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="figureCaption">Figure caption: </label>
+    <input 
+      type="text" 
+      id="figureCaption" 
+      name="figureCaption" 
+      formControlName="figureCaption"
+    />
+    @if(isFieldValid('figureCaption')) {
+      <div class="error">
+        This field is required.
+      </div>
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="attackName">Attack name: </label>
+    <input 
+      type="text" 
+      id="attackName" 
+      name="attackName" 
+      formControlName="attackName"
+    />
+    @if(isFieldValid('attackName')) {
+      <div class="error">
+        This field is required.
+      </div>
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="attackStrength">Attack strength: </label>
+    <input 
+      type="number" 
+      id="attackStrength" 
+      name="attackStrength" 
+      formControlName="attackStrength"
+    />
+    @if(isFieldValid('attackStrength')) {
+      @if(formGroup.get('attackStrength')?.hasError('required')) {
+        <div class="error">
+          This field is required.
+        </div>
+      }
+      @if(formGroup.get('attackStrength')?.hasError('min')) {
+        <div class="error">
+          This field must bigger than 0.
+        </div>
+      }
+      @if(formGroup.get('attackStrength')?.hasError('max')) {
+        <div class="error">
+          This field must smaller or equal to 200.
+        </div>
+      }
+    }
+  </div>
+
+  <div class="form-field">
+    <label for="attackDescription">Attack Description: </label>
+    <input 
+      type="text" 
+      id="attackDescription" 
+      name="attackDescription" 
+      formControlName="attackDescription"
+    />
+    @if(isFieldValid('attackDescription')) {
+      <div class="error">
+        This field is required.
+      </div>
+    }
+  </div>
+
+  <button 
+    type="submit" 
+    [disabled]="formGroup.invalid"
   >
-    Next
+    Save
   </button>
-} @else {
-  <p>Monster works!</p>
-}
+</form>
