add/ angular material

--- a/src/app/pages/monster/monster.component.css
+++ b/src/app/pages/monster/monster.component.css
@@ -1,11 +1,19 @@
 form {
-  max-width: 300px;
+  max-width: 500px;
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+mat-form-field {
+  width: 100%;
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
-  margin: 10px 0;
+  margin-bottom: 20px;
 }
 
 input[type="file"] {
@@ -50,4 +58,9 @@ button {
 .button-container {
   display: flex;
   gap: 10px;  
+}
+
+.mat-success {
+  background-color: #0C4C9F !important;
+  color: #fff !important;
 }
