add/ angular material, dialog

--- a/src/app/pages/monster/monster.component.css
+++ b/src/app/pages/monster/monster.component.css
@@ -64,3 +64,12 @@ button {
   background-color: #0C4C9F !important;
   color: #fff !important;
 }
+
+.button-container.left, .button-container.right {
+  display: inline-block;
+  width: 50%;
+}
+
+.button-container.right {
+  text-align: right;
+}
