--- a/src/app/pages/monster-list/monster-list.component.html
+++ b/src/app/pages/monster-list/monster-list.component.html
@@ -9,12 +9,13 @@
     No monsters found !
   }
 </div>
-@if(filteredMonsters().length > 0) {
-  <div class="center">Found {{ filteredMonsters().length }} monsters !</div>
-}
+@if((filteredMonsters()?.length ?? 0) > 0) {
+  <div class="center">Found {{ filteredMonsters()?.length ?? 0 }} monsters !</div>
+} 
 
 <div class="center">
   <button
+    mat-flat-button
     (click)="addMonster()"
   >
     Add Monster
