--- a/src/app/pages/monster/monster.component.html
+++ b/src/app/pages/monster/monster.component.html
@@ -155,14 +155,16 @@
     </mat-form-field>
 
     <div class="button-container left">
-      <button 
-        (click)="onDeleteMonster()"
-        type="button"
-        mat-flat-button
-        color="warn"
-      >
-        Delete
-      </button>
+      @if(monsterId !== -1) {
+        <button 
+          (click)="onDeleteMonster()"
+          type="button"
+          mat-flat-button
+          color="warn"
+        >
+          Delete
+        </button>
+      }
     </div>
     <div class="button-container right">
       <button 
